test/corpus/array5.txt
==================
array5
==================

var [5 x i32] @g_a = {1, 2, 3}

fun i32 @main () {
init:
  bid: b0
  allocations: 
    %l0:[5 x i32]:a

block b0:
  %b0:i0:i32* = getelementptr %l0:[5 x i32]* offset 0:i32
  %b0:i1:i64 = mul 0:i64 4:i64
  %b0:i2:i32* = getelementptr %b0:i0:i32* offset %b0:i1:i64
  %b0:i3:unit = store 1:i32 %b0:i2:i32*
  %b0:i4:i64 = mul 1:i64 4:i64
  %b0:i5:i32* = getelementptr %b0:i0:i32* offset %b0:i4:i64
  %b0:i6:unit = store 2:i32 %b0:i5:i32*
  %b0:i7:i64 = mul 2:i64 4:i64
  %b0:i8:i32* = getelementptr %b0:i0:i32* offset %b0:i7:i64
  %b0:i9:unit = store 3:i32 %b0:i8:i32*
  %b0:i10:i64 = mul 3:i64 4:i64
  %b0:i11:i32* = getelementptr %b0:i0:i32* offset %b0:i10:i64
  %b0:i12:unit = store 4:i32 %b0:i11:i32*
  %b0:i13:i64 = mul 4:i64 4:i64
  %b0:i14:i32* = getelementptr %b0:i0:i32* offset %b0:i13:i64
  %b0:i15:i32 = minus 5:i32
  %b0:i16:unit = store %b0:i15:i32 %b0:i14:i32*
  j b2(0:i32, 0:i32)

block b2:
  %b2:p0:i32:sum
  %b2:p1:i32:i
  %b2:i0:u1 = cmp lt %b2:p1:i32 5:i32
  br %b2:i0:u1, b3(), b5()

block b3:
  %b3:i0:i32* = getelementptr %l0:[5 x i32]* offset 0:i32
  %b3:i1:i64 = typecast %b2:p1:i32 to i64
  %b3:i2:i64 = mul %b3:i1:i64 4:i64
  %b3:i3:i32* = getelementptr %b0:i0:i32* offset %b3:i2:i64
  %b3:i4:i32 = load %b3:i3:i32*
  %b3:i5:i32 = add %b2:p0:i32 %b3:i4:i32
  %b3:i6:i32* = getelementptr @g_a:[5 x i32]* offset 0:i32
  %b3:i7:i64 = typecast %b2:p1:i32 to i64
  %b3:i8:i64 = mul %b3:i1:i64 4:i64
  %b3:i9:i32* = getelementptr %b3:i6:i32* offset %b3:i2:i64
  %b3:i10:i32 = load %b3:i9:i32*
  %b3:i11:i32 = add %b3:i5:i32 %b3:i10:i32
  %b3:i12:i32 = add %b2:p1:i32 1:i32
  j b2(%b3:i11:i32, %b3:i12:i32)

block b5:
  ret %b2:p0:i32
}

---

(source_file
  (global_variable
    (type
      (array_type
        (number)
        (type
          (sigined_integer_type))))
    (at_identifier)
    (initializer_list
      (ast_integer)
      (ast_integer)
      (ast_integer)))
  (function_definition
    (function_signature
      (type
        (sigined_integer_type))
      (at_identifier))
    (function_body
      (init_block
        (init_block_id
          (block_id))
        (init_allocations
          (allocation
            (type
              (array_type
                (number)
                (type
                  (sigined_integer_type))))
            (identifier))))
      (block
        (block_id)
        (instruction
          (instruction_id)
          (type
            (pointer_type
              (type
                (sigined_integer_type))))
          (gep_op
            (operand
              (register_operand
                (type
                  (pointer_type
                    (type
                      (array_type
                        (number)
                        (type
                          (sigined_integer_type))))))))
            (operand
              (constant_operand
                (constant
                  (number))
                (type
                  (sigined_integer_type))))))
        (instruction
          (instruction_id)
          (type
            (sigined_integer_type))
          (arith_op
            (arith_operator)
            (operand
              (constant_operand
                (constant
                  (number))
                (type
                  (sigined_integer_type))))
            (operand
              (constant_operand
                (constant
                  (number))
                (type
                  (sigined_integer_type))))))
        (instruction
          (instruction_id)
          (type
            (pointer_type
              (type
                (sigined_integer_type))))
          (gep_op
            (operand
              (register_operand
                (instruction_id)
                (type
                  (pointer_type
                    (type
                      (sigined_integer_type))))))
            (operand
              (register_operand
                (instruction_id)
                (type
                  (sigined_integer_type))))))
        (instruction
          (instruction_id)
          (type)
          (store
            (operand
              (constant_operand
                (constant
                  (number))
                (type
                  (sigined_integer_type))))
            (operand
              (register_operand
                (instruction_id)
                (type
                  (pointer_type
                    (type
                      (sigined_integer_type))))))))
        (instruction
          (instruction_id)
          (type
            (sigined_integer_type))
          (arith_op
            (arith_operator)
            (operand
              (constant_operand
                (constant
                  (number))
                (type
                  (sigined_integer_type))))
            (operand
              (constant_operand
                (constant
                  (number))
                (type
                  (sigined_integer_type))))))
        (instruction
          (instruction_id)
          (type
            (pointer_type
              (type
                (sigined_integer_type))))
          (gep_op
            (operand
              (register_operand
                (instruction_id)
                (type
                  (pointer_type
                    (type
                      (sigined_integer_type))))))
            (operand
              (register_operand
                (instruction_id)
                (type
                  (sigined_integer_type))))))
        (instruction
          (instruction_id)
          (type)
          (store
            (operand
              (constant_operand
                (constant
                  (number))
                (type
                  (sigined_integer_type))))
            (operand
              (register_operand
                (instruction_id)
                (type
                  (pointer_type
                    (type
                      (sigined_integer_type))))))))
        (instruction
          (instruction_id)
          (type
            (sigined_integer_type))
          (arith_op
            (arith_operator)
            (operand
              (constant_operand
                (constant
                  (number))
                (type
                  (sigined_integer_type))))
            (operand
              (constant_operand
                (constant
                  (number))
                (type
                  (sigined_integer_type))))))
        (instruction
          (instruction_id)
          (type
            (pointer_type
              (type
                (sigined_integer_type))))
          (gep_op
            (operand
              (register_operand
                (instruction_id)
                (type
                  (pointer_type
                    (type
                      (sigined_integer_type))))))
            (operand
              (register_operand
                (instruction_id)
                (type
                  (sigined_integer_type))))))
        (instruction
          (instruction_id)
          (type)
          (store
            (operand
              (constant_operand
                (constant
                  (number))
                (type
                  (sigined_integer_type))))
            (operand
              (register_operand
                (instruction_id)
                (type
                  (pointer_type
                    (type
                      (sigined_integer_type))))))))
        (instruction
          (instruction_id)
          (type
            (sigined_integer_type))
          (arith_op
            (arith_operator)
            (operand
              (constant_operand
                (constant
                  (number))
                (type
                  (sigined_integer_type))))
            (operand
              (constant_operand
                (constant
                  (number))
                (type
                  (sigined_integer_type))))))
        (instruction
          (instruction_id)
          (type
            (pointer_type
              (type
                (sigined_integer_type))))
          (gep_op
            (operand
              (register_operand
                (instruction_id)
                (type
                  (pointer_type
                    (type
                      (sigined_integer_type))))))
            (operand
              (register_operand
                (instruction_id)
                (type
                  (sigined_integer_type))))))
        (instruction
          (instruction_id)
          (type)
          (store
            (operand
              (constant_operand
                (constant
                  (number))
                (type
                  (sigined_integer_type))))
            (operand
              (register_operand
                (instruction_id)
                (type
                  (pointer_type
                    (type
                      (sigined_integer_type))))))))
        (instruction
          (instruction_id)
          (type
            (sigined_integer_type))
          (arith_op
            (arith_operator)
            (operand
              (constant_operand
                (constant
                  (number))
                (type
                  (sigined_integer_type))))
            (operand
              (constant_operand
                (constant
                  (number))
                (type
                  (sigined_integer_type))))))
        (instruction
          (instruction_id)
          (type
            (pointer_type
              (type
                (sigined_integer_type))))
          (gep_op
            (operand
              (register_operand
                (instruction_id)
                (type
                  (pointer_type
                    (type
                      (sigined_integer_type))))))
            (operand
              (register_operand
                (instruction_id)
                (type
                  (sigined_integer_type))))))
        (instruction
          (instruction_id)
          (type
            (sigined_integer_type))
          (unary_op
            (unary_operator)
            (operand
              (constant_operand
                (constant
                  (number))
                (type
                  (sigined_integer_type))))))
        (instruction
          (instruction_id)
          (type)
          (store
            (operand
              (register_operand
                (instruction_id)
                (type
                  (sigined_integer_type))))
            (operand
              (register_operand
                (instruction_id)
                (type
                  (pointer_type
                    (type
                      (sigined_integer_type))))))))
        (exit
          (jump
            (block_id)
            (operand
              (constant_operand
                (constant
                  (number))
                (type
                  (sigined_integer_type))))
            (operand
              (constant_operand
                (constant
                  (number))
                (type
                  (sigined_integer_type)))))))
      (block
        (block_id)
        (phi_node
          (phi_id)
          (type
            (sigined_integer_type))
          (identifier))
        (phi_node
          (phi_id)
          (type
            (sigined_integer_type))
          (identifier))
        (instruction
          (instruction_id)
          (type
            (unsigned_integer_type))
          (cmp_op
            (cmp_operator)
            (operand
              (register_operand
                (phi_id)
                (type
                  (sigined_integer_type))))
            (operand
              (constant_operand
                (constant
                  (number))
                (type
                  (sigined_integer_type))))))
        (exit
          (conditional_branch
            (operand
              (register_operand
                (instruction_id)
                (type
                  (unsigned_integer_type))))
            (block_id)
            (block_id))))
      (block
        (block_id)
        (instruction
          (instruction_id)
          (type
            (pointer_type
              (type
                (sigined_integer_type))))
          (gep_op
            (operand
              (register_operand
                (type
                  (pointer_type
                    (type
                      (array_type
                        (number)
                        (type
                          (sigined_integer_type))))))))
            (operand
              (constant_operand
                (constant
                  (number))
                (type
                  (sigined_integer_type))))))
        (instruction
          (instruction_id)
          (type
            (sigined_integer_type))
          (typecast
            (operand
              (register_operand
                (phi_id)
                (type
                  (sigined_integer_type))))
            (type
              (sigined_integer_type))))
        (instruction
          (instruction_id)
          (type
            (sigined_integer_type))
          (arith_op
            (arith_operator)
            (operand
              (register_operand
                (instruction_id)
                (type
                  (sigined_integer_type))))
            (operand
              (constant_operand
                (constant
                  (number))
                (type
                  (sigined_integer_type))))))
        (instruction
          (instruction_id)
          (type
            (pointer_type
              (type
                (sigined_integer_type))))
          (gep_op
            (operand
              (register_operand
                (instruction_id)
                (type
                  (pointer_type
                    (type
                      (sigined_integer_type))))))
            (operand
              (register_operand
                (instruction_id)
                (type
                  (sigined_integer_type))))))
        (instruction
          (instruction_id)
          (type
            (sigined_integer_type))
          (load
            (operand
              (register_operand
                (instruction_id)
                (type
                  (pointer_type
                    (type
                      (sigined_integer_type))))))))
        (instruction
          (instruction_id)
          (type
            (sigined_integer_type))
          (arith_op
            (arith_operator)
            (operand
              (register_operand
                (phi_id)
                (type
                  (sigined_integer_type))))
            (operand
              (register_operand
                (instruction_id)
                (type
                  (sigined_integer_type))))))
        (instruction
          (instruction_id)
          (type
            (pointer_type
              (type
                (sigined_integer_type))))
          (gep_op
            (operand
              (constant_operand
                (constant
                  (at_identifier))
                (type
                  (pointer_type
                    (type
                      (array_type
                        (number)
                        (type
                          (sigined_integer_type))))))))
            (operand
              (constant_operand
                (constant
                  (number))
                (type
                  (sigined_integer_type))))))
        (instruction
          (instruction_id)
          (type
            (sigined_integer_type))
          (typecast
            (operand
              (register_operand
                (phi_id)
                (type
                  (sigined_integer_type))))
            (type
              (sigined_integer_type))))
        (instruction
          (instruction_id)
          (type
            (sigined_integer_type))
          (arith_op
            (arith_operator)
            (operand
              (register_operand
                (instruction_id)
                (type
                  (sigined_integer_type))))
            (operand
              (constant_operand
                (constant
                  (number))
                (type
                  (sigined_integer_type))))))
        (instruction
          (instruction_id)
          (type
            (pointer_type
              (type
                (sigined_integer_type))))
          (gep_op
            (operand
              (register_operand
                (instruction_id)
                (type
                  (pointer_type
                    (type
                      (sigined_integer_type))))))
            (operand
              (register_operand
                (instruction_id)
                (type
                  (sigined_integer_type))))))
        (instruction
          (instruction_id)
          (type
            (sigined_integer_type))
          (load
            (operand
              (register_operand
                (instruction_id)
                (type
                  (pointer_type
                    (type
                      (sigined_integer_type))))))))
        (instruction
          (instruction_id)
          (type
            (sigined_integer_type))
          (arith_op
            (arith_operator)
            (operand
              (register_operand
                (instruction_id)
                (type
                  (sigined_integer_type))))
            (operand
              (register_operand
                (instruction_id)
                (type
                  (sigined_integer_type))))))
        (instruction
          (instruction_id)
          (type
            (sigined_integer_type))
          (arith_op
            (arith_operator)
            (operand
              (register_operand
                (phi_id)
                (type
                  (sigined_integer_type))))
            (operand
              (constant_operand
                (constant
                  (number))
                (type
                  (sigined_integer_type))))))
        (exit
          (jump
            (block_id)
            (operand
              (register_operand
                (instruction_id)
                (type
                  (sigined_integer_type))))
            (operand
              (register_operand
                (instruction_id)
                (type
                  (sigined_integer_type)))))))
      (block
        (block_id)
        (exit
          (return
            (operand
              (register_operand
                (phi_id)
                (type
                  (sigined_integer_type))))))))))
